--- a/PizzaMeWorking/MapKitDemo/Base.lproj/Main.storyboard
+++ b/PizzaMeWorking/MapKitDemo/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Map View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="PizzaMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mapView" id="BYZ-38-t0r" customClass="MapViewController" customModule="PizzaMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -85,6 +85,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="A9d-eK-Jyd">
                                 <rect key="frame" x="20" y="515" width="560" height="36"/>
+                                <color key="backgroundColor" red="0.93488138914108276" green="0.99583917856216431" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                 <connections>
                                     <action selector="callPizzaButtonPressed:" destination="oTp-aK-Iln" eventType="touchUpInside" id="feM-3q-PMg"/>
@@ -120,6 +121,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <mapView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="oXC-Jo-jPe">
+                            <rect key="frame" x="0.0" y="176" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </mapView>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pizzaCell" textLabel="gUs-Uf-Eob" detailTextLabel="IFA-Xm-a7a" style="IBUITableViewCellStyleValue1" id="PAL-pd-AVC">
                                 <rect key="frame" x="0.0" y="114" width="600" height="44"/>
@@ -164,6 +169,9 @@
                             </connections>
                         </button>
                     </navigationItem>
+                    <connections>
+                        <outlet property="myMapView" destination="oXC-Jo-jPe" id="ZAy-wd-O98"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tbh-QF-mut" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -172,7 +180,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="euV-qK-jFT">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tEU-kl-1wt" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="pizzaTab" automaticallyAdjustsScrollViewInsets="NO" id="tEU-kl-1wt" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="WfX-dn-faW"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="WNQ-Z7-I7h">
@@ -191,7 +199,7 @@
         <!--Pizza Map View-->
         <scene sceneID="l0q-fx-Rei">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aH9-pN-cJu" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="mapNav" automaticallyAdjustsScrollViewInsets="NO" id="aH9-pN-cJu" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Pizza Map View" id="j83-fO-9WD"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DGK-J1-S5s">
@@ -210,7 +218,7 @@
         <!--Pizza List View-->
         <scene sceneID="ZjQ-7m-yif">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pYd-P9-BYD" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="tableNav" automaticallyAdjustsScrollViewInsets="NO" id="pYd-P9-BYD" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Pizza List View" id="Uiz-9W-sLL"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="AJq-B0-zzQ">
